fixed openapi file for acc
